# adc

./: .gitignore  01-intent.md  02-user-stories.md  04-units-of-work.md  05-schema.md  06-deployment.md  07-cli.md  08-workflows.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: adc-check.sh  adc-check.yml
03-adr/: ADR-001-canonical-ir-and-anchors.md  ADR-002-kernel-occt-rust.md  ADR-003-checker-contract.md  ADR-004-open-parameters.md  ADR-005-assembly-mates.md  ADR-006-no-embedded-llm.md
crates/adc-check/: Cargo.toml
crates/adc-check/src/: checkers.rs  lib.rs
crates/adc-check/tests/: m2_1_contract.rs  m2_2_clearance.rs  m2_3_mass_cog.rs  m2_4_wall.rs  m2_5_datum.rs  m2_6_cache.rs  m3_assembly.rs  m4_1_open.rs  m4_2_narrow.rs  m5_1_angle_e2e.rs  m5_2_rules.rs  m5_3_stack.rs
crates/adc-cli/: Cargo.toml
crates/adc-cli/src/: diff.rs  main.rs  report.rs
crates/adc-cli/tests/: check_cli.rs  diff_cli.rs  explain_cli.rs  m6_0_cli.rs  report_cli.rs
crates/adc-compile/: Cargo.toml
crates/adc-compile/src/: assembly.rs  cache.rs  frame.rs  lib.rs
crates/adc-compile/tests/: m1_2_provides.rs  m1_3_edges.rs  m1_4_pattern.rs  m1_5_rebinding.rs  m1_6_step.rs  m1_7_feature_fail.rs  m5_1_sheet.rs
crates/adc-kernel/: Cargo.toml
crates/adc-kernel/src/: lib.rs
crates/adc-kernel/tests/: m1_1_history_binding.rs
crates/adc-mcp/: Cargo.toml
crates/adc-mcp/src/: lib.rs  main.rs
crates/adc-mcp/tests/: adr006_deps.rs  m6_1_core.rs  m6_1_protocol.rs
crates/adc-schema/: Cargo.toml
crates/adc-schema/src/: assembly.rs  assertion.rs  design.rs  desugar.rs  error.rs  eval.rs  explain.rs  expr.rs  ids.rs  lib.rs  part.rs  sheet.rs  tolerance.rs  validate.rs
crates/adc-schema/tests/: m0_1_errors.rs  m0_1_roundtrip.rs  m0_1_sample.rs  m0_1_sugar.rs  m0_2_validation.rs  m0_3_eval.rs  m0_4_explain.rs  m0_exit.rs  m1_4_pattern_ids.rs  m3_static_rules.rs  m5_1_derived.rs  m5_3_static.rs
crates/adc-schema/tests/common/: mod.rs
docs/: M1-0-api-coverage.md  binding-cache.md  checkers.md  error-catalog.md  explain-schema.md  occt-gotchas.md  placement-frames.md  provides-predicates.md  quickstart.md  test-discipline.md
docs/design-notes/: m5-1-sheet-metal.md  m6-1-mcp-server.md
docs/experiments/: success-criterion-3-rehearsal.md  success-criterion-3-run1-preliminary.md  success-criterion-3.md  success-criterion-4-main.md  success-criterion-4-preliminary.md
examples/motor_bracket/: design.ron  golden_step.json
examples/starter-repo/: .mcp.json  CLAUDE.md  README.md  design.ron
examples/starter-repo/.claude/skills/adc-repair/: SKILL.md
examples/starter-repo/.github/workflows/: adc-check.sh  adc-check.yml
examples/starter-repo/docs/: experiment-log.md
experiments/sc4/: README.md
experiments/sc4/C1/: EXPECTED.md  design.ron
experiments/sc4/C2/: EXPECTED.md  design.ron
experiments/sc4/C3/: EXPECTED.md  design.ron
experiments/sc4/C4/: EXPECTED.md  design.ron
experiments/sc4/C5/: EXPECTED.md  design.ron
scripts/: golden-step-check.sh  step_volume.py
