[workspace]
resolver = "2"
members = [
    "crates/adc-schema",
    "crates/adc-cli",
    "crates/adc-kernel",
    "crates/adc-compile",
    "crates/adc-check", "crates/adc-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.8"
thiserror = "1"
serde_json = "1"
sha2 = "0.10"
