[package]
name = "adc-check"
version.workspace = true
edition.workspace = true
description = "検証ハーネス — Checkerトレイト+実装群 (ADR-003)"

[dependencies]
adc-schema = { path = "../adc-schema" }
adc-compile = { path = "../adc-compile" }
adc-kernel = { path = "../adc-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
