[package]
name = "adc-cli"
version.workspace = true
edition.workspace = true
description = "ADC CLI — adc バイナリ (07-cli.md)"

[[bin]]
name = "adc"
path = "src/main.rs"

[dependencies]
adc-schema = { path = "../adc-schema" }
adc-compile = { path = "../adc-compile" }
adc-kernel = { path = "../adc-kernel" }
adc-check = { path = "../adc-check" }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
