[package]
name = "adc-compile"
version.workspace = true
edition.workspace = true
description = "フィーチャー→B-repコンパイル、provides台帳、アンカー束縛 (OCCT非依存 — adc-kernel経由)"

[dependencies]
adc-schema = { path = "../adc-schema" }
adc-kernel = { path = "../adc-kernel" }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
