[package]
name = "adc-kernel"
version.workspace = true
edition.workspace = true
description = "OCCT FFI境界 — 唯一OCCTに触れる層 (ADR-002)"

[dependencies]
# fork: rev固定はCargo.lockが担う (ADR-002 / docs/M1-0-api-coverage.md §6)。
# ローカルで fork を編集して試すときは workspace の [patch] で path 上書きする
opencascade = { git = "https://github.com/NakaGater/opencascade-rs.git", branch = "adc" }
glam = "0.24"
