[package]
name = "adc-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
adc-check = { version = "0.1.0", path = "../adc-check" }
adc-schema = { version = "0.1.0", path = "../adc-schema" }
rmcp = { version = "2.2.0", features = ["transport-io"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
